// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - No Props 1`] = `
<div
  class="up-down-arrow"
>
  <svg
    class=""
    viewBox="0 0 24 24"
  >
    <path
      d="M7 14l5-5 5 5z"
    />
  </svg>
   
  <svg
    class=""
    viewBox="0 0 24 24"
  >
    <path
      d="M7 10l5 5 5-5z"
    />
  </svg>
</div>
`;

exports[`Renders Correctly - Passed with Props 1`] = `
<div
  class="up-down-arrow"
>
  <svg
    class="active-arrow"
    viewBox="0 0 24 24"
  >
    <path
      d="M7 14l5-5 5 5z"
    />
  </svg>
   
  <svg
    class=""
    viewBox="0 0 24 24"
  >
    <path
      d="M7 10l5 5 5-5z"
    />
  </svg>
</div>
`;
